# bc-analytics

./: README.md  pyproject.toml  requirements.txt
clinical/: 01-clinical-statistics.ipynb  README.md
community/: 00-community-statistics.ipynb  01-community-statistics.ipynb  02-community-linguistics.ipynb  03-breastcancer-shingle.ipynb  04-embed.ipynb  05-search.ipynb  06-topics.ipynb  README.md
