[project]
name = "notebooks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastparquet>=2024.11.0",
    "jupyter>=1.1.1",
    "pandas>=2.2.3",
    "pip>=25.0.1",
    "pyarrow>=19.0.1",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "sentence-transformers>=4.1.0",
    "spacy>=3.8.5",
    "tqdm>=4.67.1",
]
